# amazon-kinesis-video-streams-webrtc-sdk-c

./: .travis.yml  CMakeLists.txt  Doxyfile  Doxygen.md  build-armv7.sh  build-cached-armv7.sh  build-cached-debug-armv7.sh  build-debug-armv7.sh
CMake/Dependencies/: libopenssl-CMakeLists.txt
cpp/: CMakeLists.txt
cpp/addons/live/: Makefile  config.armv7linux
cpp/addons/live/BasicUsageEnvironment/: BasicHashTable.cpp  Makefile
cpp/addons/live/BasicUsageEnvironment/include/: BasicHashTable.hh
cpp/addons/live/UsageEnvironment/: HashTable.cpp  Makefile
cpp/addons/live/UsageEnvironment/include/: HashTable.hh
cpp/addons/live/groupsock/: Makefile
cpp/addons/live/groupsock/include/: NetAddress.hh  NetInterface.hh
cpp/addons/live/hlsProxy/: Makefile
cpp/addons/live/liveMedia/: Makefile  OggFile.cpp
cpp/addons/live/liveMedia/include/: GenericMediaServer.hh  MPEG2TransportFileServerMediaSubsession.hh  MPEG2TransportStreamFramer.hh  MatroskaFile.hh  Media.hh  MediaSession.hh  OggFile.hh  OnDemandServerMediaSubsession.hh  PassiveServerMediaSubsession.hh  RTPSink.hh  RTPSource.hh  RTSPServer.hh
cpp/addons/live/mediaServer/: Makefile
cpp/addons/live/proxyServer/: Makefile
cpp/addons/live/testProgs/: Makefile  Makefile.tail  testRTSPClient.cpp  webrtcMaster.cpp
cpp/src/: MemorySink.cpp  MemorySink.h  StreamClientState.cpp  StreamClientState.h  WebRTCRTSPClient.cpp  WebRTCRTSPClient.h  webrtc.cpp  webrtc.h
html/: _channel_info_8h.html  _channel_info_8h_source.html  _connection_listener_8h.html  _connection_listener_8h_source.html  _data_channel_8h.html  _data_channel_8h_source.html  _doxygen_8md.html  _dtls_8h.html  _dtls_8h_source.html  _ice_agent_8h.html  _ice_agent_8h_source.html  _ice_agent_state_machine_8h.html  _ice_agent_state_machine_8h_source.html  _ice_utils_8h.html  _ice_utils_8h_source.html  _include_8h.html  _include_8h_source.html  _include__i_8h.html  _include__i_8h_source.html  _jitter_buffer_8h.html  _jitter_buffer_8h_source.html  _lws_api_calls_8h.html  _lws_api_calls_8h_source.html  _network_8h.html  _network_8h_source.html  _peer_connection_8h.html  _peer_connection_8h_source.html  _retransmitter_8h.html  _retransmitter_8h_source.html  _rolling_buffer_8h.html  _rolling_buffer_8h_source.html  _rtcp_8h.html  _rtcp_8h_source.html  _rtcp_packet_8h.html  _rtcp_packet_8h_source.html  _rtp_8h.html  _rtp_8h_source.html  _rtp_g711_payloader_8h.html  _rtp_g711_payloader_8h_source.html  _rtp_h264_payloader_8h.html  (+327 more)
html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  (+96 more)
samples/: Common.c  Samples.h  kvsWebRTCClientMaster.c  kvsWebRTCClientMasterGstreamerSample.c  kvstest.c  webrtc.c  webrtc.h  webrtcMonitor.c  webrtcUtils.c
tst/: PeerConnectionApiTest.cpp  PeerConnectionFunctionalityTest.cpp  TurnConnectionFunctionalityTest.cpp  WebRTCClientTestFixture.cpp  WebRTCClientTestFixture.h
(+111 files in other folders)
